<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/admin_user_name" />

            <TextView
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:text="@string/_1_s"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ssn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/role"
                android:textStyle="bold"
                android:text="@string/admin_user_ssn"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>