<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context="fenrirmma.hreysti_app.user.Admin.userInfoAdminActivity">

        android:layout_width="match_parent"
        android:layout_height="80dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_user_name"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/edit_user_ssn"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Name:"
                android:textColor="@android:color/black"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/admin_user_name"
                android:inputType="textCapSentences" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/edit_user_ssn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="SSN:"
            android:textSize="20dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/user_ssn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_above="@+id/edit_user_name"
            android:layout_alignStart="@+id/edit_user_name"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/admin_user_ssn" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/user_role"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="Role:"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>
        <EditText
            android:id="@+id/edit_user_role"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="tjékka á þessu"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edit_user_start_date"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/select_date"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/edit_user_expire_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/admin_user_startdate" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <Button
            android:id="@+id/edit_user_change_confirm"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="confirmChanges"
            android:text="@string/admin_user_update_confirm"
            android:backgroundTint="@android:color/black"
            android:textColor="@android:color/white"
            android:background="@android:drawable/dialog_holo_light_frame"/>

        <Button
            android:id="@+id/edit_user_remove"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edit_user_change_confirm"
            android:layout_alignBottom="@+id/edit_user_change_confirm"
            android:layout_toEndOf="@+id/edit_user_change_confirm"
            android:onClick="removeUser"
            android:text="@string/remove_user"
            android:backgroundTint="@android:color/black"
            android:textColor="@android:color/white"
            android:background="@android:drawable/dialog_holo_light_frame"/>
        </LinearLayout>
    </RelativeLayout>



</LinearLayout>
